<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/di_back"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:background="@drawable/di_back">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/extrabold"
            android:gravity="center"
            android:text="@string/start_rimindnew"
            android:textColor="#689F38"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="197dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:text="@string/start_riminddnew"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="362dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/baseline_title_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                android:hint="@string/title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="361dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/baseline_subtitles_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                android:hint="@string/message" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="361dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                android:hint="@string/date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="361dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/baseline_access_time_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                android:hint="@string/time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="361dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/baseline_notes_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/regular"
                android:hint="@string/note" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTask"
            android:layout_width="359dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/bold"
            android:text="@string/start_rimindnewa"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>