<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:contentPadding="10dp"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:fontFamily="@font/regular"
                android:text="@string/tue"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bold"
                android:text="18"
                android:textColor="@color/prime"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:fontFamily="@font/regular"
                android:text="@string/nov"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:singleLine="true"
                    android:gravity="left"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="Full house" />

                <ImageView
                    android:id="@+id/options"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/baseline_more_horiz_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/regular"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="Full House is the Grand prize in any Tambola game played. It means all 15 Numbers of a ticket are cut, striked out" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/regular"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/completed"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>